# gtoterminal

./: .env.example  .gitignore  LICENSE  README.md  index.html  serve.sh
css/: boot.css  charts.css  components.css  hand-matrix.css  learn.css  responsive.css  stream.css  terminal.css
js/: app.js  state.js
js/ai/: groq-client.js  insight-panel.js  prompt-builder.js
js/analytics/: aggregator.js  dashboard.js  tracker.js
js/content/: content-engine.js  learn-view.js  player-profile.js  profile-view.js
js/data/: board-categories.js  content-catalog.js  hand-constants.js  postflop-matchups.js  postflop-solution-index-15bb.js  postflop-solution-index-25bb.js  postflop-solution-index-40bb.js  postflop-solution-index.js  postflop-solutions-15bb.js  postflop-solutions-25bb.js  postflop-solutions-40bb.js  postflop-solutions.js  postflop-strategy.js  preflop-ranges.js  preflop-solutions.js  push-fold-charts.js  tournament-catalog.js  tournament-structures.js
js/engine/: deck.js  drill-engine.js  hand-evaluator.js  hand-playthrough.js  icm.js  postflop-drill.js  postflop-lookup.js  preflop-drill.js  range-filter.js  scenario-generator.js  scoring.js  tournament-drill.js
js/solver/: preflop-solver-api.js  preflop-solver-cache.js  preflop-solver-worker.js  solver-api.js  solver-cache.js  solver-worker.js
scripts/: auto-widen.mjs  precompute-postflop.mjs  precompute-preflop.mjs  validate-preflop.mjs  widen-ranges.mjs
solver/: Cargo.toml
solver-preflop/: Cargo.toml
solver-preflop/src/: cfr.rs  equity.rs  game_tree.rs  hands.rs  lib.rs
solver/src/: lib.rs
(+26 files in other folders)
