[package]
name = "preflop-solver-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WASM preflop CFR+ solver for GTOTerminal"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
